# opensim_ik_solver

./: CMakeLists.txt  README.md  package.xml
config/: links_config.yaml
include/opensim_ik_solver/: Consumer.h  IKSolver.h  Publisher.h  PublisherData.h  Queue.h  RTIKTool.h  RTIMUIKTool.h  RTIMUPlacer.h  utils.h
launch/: custom_configuration_example.launch  default.launch  default.launch.py  hiros_opensim_ik_solver_default.launch  test_mimu_publisher.launch  test_rosbag.launch
models/: Rajagopal2015_edited.osim  Rajagopal2015_edited_calibrated.osim  Rajagopal2015_k4a_xsens.osim  human18dof_subj0_opensim.osim  human18dof_subj0_opensim_calibrated.osim
src/: Consumer.cpp  IKSolver.cpp  Publisher.cpp  RTIKTool.cpp  RTIMUIKTool.cpp  RTIMUPlacer.cpp  main.cpp  utils.cpp
