<?xml version="1.0"?>
<package format="2">
  <name>hiros_opensim_ik_solver</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained opensim_ik_solver package</description>
  <maintainer email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</maintainer>
  <maintainer email="luca.tagliapietra@unipd.it">Luca Tagliapietra</maintainer>
  <license>TODO</license>

  <url type="website">https://gitlab.com/hi-ros</url>
  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>hiros_skeleton_msgs</depend>
</package>
